<resources>
    <string name="app_name">Android Layouts</string>
    <string name="top_featured_title">Top featured</string>
    <string name="selected_country">Brazil</string>
    <string name="header_background_color">header background color</string>
    <string name="activity_trip_details_destination_image">Landscape image of the target destination</string>

    <plurals name="numberOfDays">
        <item quantity="one">%d day</item>
        <item quantity="other">%d days</item>
    </plurals>

    <string name="activity_list_trips_title">Choose your destination</string>
    <string name="activity_trip_details_special_offer">Special offer:</string>
    <string name="activity_trip_details_buy_it_button_text">Buy it!</string>
    <string name="activity_trip_details_title">Choose this offer</string>
    <string name="activity_payment_help_text">Enter you credit card details to buy this awesome trip</string>
    <string name="activity_payment_total_text">Total:</string>
    <string name="activity_payment_payment_button_text">Confirm</string>
    <string name="activity_payment_card_name_hint">Bill Asgard</string>
    <string name="activity_payment_cvc_hint">CVC</string>
    <string name="activity_payment_yy_hint">YY</string>
    <string name="activity_payment_mm_hint">MM</string>
    <string name="activity_payment_credit_card_number_hint">1256 8987 8945 1456</string>
    <string name="activity_payment_title">Payment</string>
    <string name="activity_payment_allowed_chars_mask">abcdefghijklmnopqrstuvwxyzçABCDEFGHIJKLMNOPQRSTUVWXYZÇ\u0020</string>
    <string name="activity_purchase_details_title">Purchase Details</string>
    <string name="activity_purchase_details_congratulations_title">Congratulations!</string>
    <string name="activity_purchase_details_you_successfully_bought_you_trip">You successfully bought you trip! =)</string>
    <string name="activity_purchase_details_check_your_new_trip">Check your new trip:</string>
    <string name="activity_purchase_details_solid_color_header">Solid color header</string>
    <string name="activity_purchase_details_landscape_of_your_destination">Landscape of your destination</string>
</resources>
