<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.PaymentActivity">

    <TextView
        android:id="@+id/payment_help_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/activity_payment_help_text"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/payment_total_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/activity_payment_total_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/payment_help_text" />

    <TextView
        android:id="@+id/payment_total_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/payment_total_text"
        app:layout_constraintTop_toBottomOf="@+id/payment_total_text"
        tools:text="$ 42.98" />

    <EditText
        android:id="@+id/payment_credit_card_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/activity_payment_credit_card_number_hint"
        android:inputType="number"
        android:maxLength="16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/payment_total_value" />

    <EditText
        android:id="@+id/payment_credit_card_number_month"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:hint="@string/activity_payment_mm_hint"
        android:inputType="number"
        android:maxLength="2"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/payment_credit_card_cvc"
        app:layout_constraintStart_toStartOf="@id/payment_credit_card_number" />

    <EditText
        android:id="@+id/payment_credit_card_number_year"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:hint="@string/activity_payment_yy_hint"
        android:inputType="number"
        android:maxLength="2"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/payment_credit_card_cvc"
        app:layout_constraintStart_toEndOf="@id/payment_credit_card_number_month" />

    <EditText
        android:id="@+id/payment_credit_card_cvc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_cvc_cartao_de_credito"
        android:hint="@string/activity_payment_cvc_hint"
        android:inputType="number"
        android:maxLength="3"
        android:textAlignment="center"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintEnd_toEndOf="@id/payment_credit_card_number"
        app:layout_constraintTop_toBottomOf="@id/payment_credit_card_number" />

    <EditText
        android:id="@+id/payment_credit_card_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:hint="@string/activity_payment_card_name_hint"
        android:inputType="text"
        android:digits="@string/allowed_chars_mask"
        app:layout_constraintEnd_toEndOf="@id/payment_credit_card_cvc"
        app:layout_constraintStart_toStartOf="@id/payment_credit_card_number_month"
        app:layout_constraintTop_toBottomOf="@id/payment_credit_card_cvc" />

    <Button
        android:id="@+id/payment_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/orange_rounded_button"
        android:text="@string/activity_payment_payment_button_text"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="@+id/payment_credit_card_name"
        app:layout_constraintStart_toStartOf="@id/payment_credit_card_name"
        app:layout_constraintTop_toBottomOf="@+id/payment_credit_card_name" />
</android.support.constraint.ConstraintLayout>